docs: sync documentation with actual code
- Fix wrong image path in BACKEND_INTEGRATION_CONTEXT.md
- Add missing controllers (CoreDNS, Hubble UI) to README.md
- Update ARCHITECTURE.md dependency chain with all controllers
- Fix Kustomizations table: add monitoring-logging, hubble-ui,
  correct monitoring dependsOn (infra-controllers + taskflow-app)
- Fix Jaeger resource values (250m CPU, not 100-500m)
- Add missing files to file structure (waf, logging, hubble, image-automation)
- Expand §10.4 controller list to include all platform components
- Remove duplicate TLS/cert-manager entries in Known Limitations table